# slideshow2video

./: README.md  pyproject.toml  slideshow2video.py
slideshow2video/: cli.py  creator.py  extractor.py  utils.py
