[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slideshow2video"
version = "1.0.0"
description = "Инструмент для создания динамических слайдшоу для YouTube и обратного извлечения слайдов."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python-headless",
    "tqdm"
]

[project.scripts]
slideshow2video = "slideshow2video.cli:main"
