[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slideshow2video"
dynamic = ["version"]
description = "High-performance CLI tool to generate dynamic slideshow videos and reverse-extract clean slide images."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python-headless",
    "tqdm"
]

[project.scripts]
slideshow2video = "slideshow2video.cli:main"

[tool.setuptools.dynamic]
version = {attr = "slideshow2video.__version__"}
